# hayopt

./: Cargo.toml  README.md  hayashi.toml
.github/workflows/: release.yml
examples/: basic.hay  global_optimization.hay  root_finding.hay
src/: lib.rs
