[package]
name = "hayopt"
version = "0.1.2"
edition = "2021"
description = "Optimization plugin for Hayashi"
license = "MIT"
repository = "https://github.com/sheep-farm/hayopt"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk.git", branch = "main" }
faer = "0.19"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"
